# dlt-airplanes

./: .gitignore  download.sh  pipeline-flights.py  pipeline.sh  pyproject.toml
.dlt/: config.toml  secrets.toml.template
